Sets width to filters column to fix layout issue on schedule list view.

--- a/src/style/full-schedule.module.scss
+++ b/src/style/full-schedule.module.scss
@@ -39,6 +39,7 @@
   .filterWrapper {
     position: relative;
     margin: 15px 0 0 30px;
+    width: 30%;
 
     @media (min-width: 991px) {
       position: sticky;
